[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/messageboard.png" type="Texture" id=1]
[ext_resource path="res://assets/felix.png" type="Texture" id=2]
[ext_resource path="res://assets/rohrlinesfarbespeed.png" type="Texture" id=3]
[ext_resource path="res://Felix_Message.gd" type="Script" id=4]
[ext_resource path="res://assets/cog1000.png" type="Texture" id=5]
[ext_resource path="res://MessageBoard.gd" type="Script" id=6]

[sub_resource type="Animation" id=1]
resource_name = "IncomingMessage"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -1000 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Messages/SinkMessage:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 496.88, -470 ), Vector2( 496.88, 530.412 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Messages/CogsMessage:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 484.687, -470 ), Vector2( 484.687, 530.412 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Messages/WelcomeMessage:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 496.88, -470 ), Vector2( 496.88, 530 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../FelixSprite:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2000, 542.605 ), Vector2( 940, 542.605 ) ]
}

[node name="Felix_Message" type="Node2D"]
script = ExtResource( 4 )

[node name="FelixSprite" type="Sprite" parent="."]
position = Vector2( 2000, 542.605 )
texture = ExtResource( 2 )

[node name="Message" type="Node2D" parent="."]
position = Vector2( 0, -1000 )

[node name="MessageBoard" type="Sprite" parent="Message"]
position = Vector2( 960.228, 539.557 )
texture = ExtResource( 1 )
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="Messages" type="Node" parent="Message"]

[node name="SinkMessage" type="Sprite" parent="Message/Messages"]
visible = false
position = Vector2( 496.88, -470 )
scale = Vector2( 0.4, 0.4 )
z_index = 1
texture = ExtResource( 3 )

[node name="CogsMessage" type="Sprite" parent="Message/Messages"]
visible = false
position = Vector2( 484.687, -470 )
z_index = 1
texture = ExtResource( 5 )

[node name="WelcomeMessage" type="Sprite" parent="Message/Messages"]
visible = false
position = Vector2( 496.88, -470 )
z_index = 1
texture = ExtResource( 2 )

[node name="MessageAnimation" type="AnimationPlayer" parent="Message"]
anims/IncomingMessage = SubResource( 1 )
